[gd_scene load_steps=2 format=3 uid="uid://1qcd4cpce1o8"]

[ext_resource type="Script" uid="uid://btn3nyblyewc0" path="res://scenes/config_ui/file_picker.gd" id="1_x0py0"]

[node name="FilePicker" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -31.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x0py0")
target_name = "Folder"

[node name="PathLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "File"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PathLineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Path To File"
editable = false
emoji_menu_enabled = false

[node name="BrowseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Browse..."
